feat(frontend): add many

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,26 @@
 name: guess_what
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.31.1
+  firebase_database: ^10.5.6
+  cloud_firestore: ^4.17.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - images/  
+    - images/gambar_soal/
